# docln_fetch

./: Cargo.toml  config.toml
.github/workflows/: release.yml
config/: bilinovel.toml  docln.toml  esjzone.toml  syosetu.toml
src/: config.rs  crawler.rs  epub.rs  extractor.rs  lib.rs  logger.rs  main.rs  utils.rs
src/crawler/: downloader.rs  parser.rs  processor.rs  task.rs
src/epub/: chapter.rs  compression.rs  metadata.rs  volume.rs
src/extractor/: attr.rs  combine.rs  current.rs  html.rs  list.rs  next.rs  text.rs  url.rs
