[[bin]]
name = "docln-fetch"
path = "src/main.rs"

[package]
name = "docln_fetch"
version = "0.2.0"
edition = "2024"

[dependencies]
scraper = "0.24"
serde_json = "1.0"
chrono = "0.4"
anyhow = "1.0"
sha2 = "0.10"
bytes = "1.10"
tracing = "0.1"
tracing-subscriber = "0.3"

[dependencies.reqwest]
version = "0.12"
features = ["json"]

[dependencies.tokio]
version = "1"
features = ["full"]

[dependencies.async_zip]
version = "0.0.18"
features = [
    "tokio",
    "deflate",
    "tokio-fs",
]

[profile.release]
lto = true
strip = true
